# kermio

./: .gitignore  .gitmodules  Cargo.toml  roadmap.md  sync-jsi-headers.sh
.cargo/: config.toml
crates/hermes-engine/: .cargo-ignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md  apply-patches.sh  build.rs  wrapper.cpp  wrapper.h
crates/hermes-engine/examples/: prepared_javascript.rs
crates/hermes-engine/patches/: 01-api-cmake.patch  02-root-cmake.patch  03-tools-cmake.patch
crates/hermes-engine/src/: bridge.rs  config.rs  error.rs  hermes_bridge.cpp  hermes_bridge.h  lib.rs  runtime.rs  wrapper.h
crates/hermes-engine/tests/: jsi_rs.rs
crates/hermes-engine/tests/jsi-rs/: array.rs  bigint.rs  function.rs  mod.rs  object.rs  propnameid.rs  runtime_shortcuts.rs  string.rs  value.rs
crates/jsi-rs/: CLAUDE.md  Cargo.toml  build.rs
crates/jsi-rs/src/: array.rs  bigint.rs  bridge.h  error.rs  function.rs  lib.rs  object.rs  propnameid.rs  runtime.rs  string.rs  sys.rs  value.rs
