[package]
name = "hermes-engine"
version = "0.0.1"
edition = "2021"
license = "MIT"
exclude = [
    "hermes-vendor/build/",
    "hermes-vendor/_build/",
    "hermes-vendor/CMakeFiles/",
    "hermes-vendor/CMakeCache.txt",
    "hermes-vendor/cmake-build-*",
    "hermes-vendor/**/*.a",
    "hermes-vendor/**/*.o",
    "hermes-vendor/.git/",
    "hermes-vendor/API/hermes_sandbox/",
    "hermes-vendor/benchmarks/",
    "hermes-vendor/test/",
    "hermes-vendor/unittests/",
    "hermes-vendor/examples/",
    "hermes-vendor/doc/",
    "hermes-vendor/.github/",
    "hermes-vendor/.circleci/",
    "hermes-vendor/.devcontainer/",
    "hermes-vendor/npm/",
    "hermes-vendor/android/build-logic",
    "hermes-vendor/android/cppruntime",
    "hermes-vendor/android/cross-compile",
    "hermes-vendor/android/gradle",
    "hermes-vendor/android/ios-artifacts",
    "hermes-vendor/android/*.gradle*",
    "hermes-vendor/android/gradlew*",
    "hermes-vendor/external/esprima/test_fixtures/",
    "hermes-vendor/external/flowtest/",
]

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.70"
cc = "1.0"
cmake = "0.1"
