[package]
name = "hermes-engine"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Rust bindings to the Hermes JavaScript engine"
repository = "https://github.com/ovr/kermio/tree/main/crates/hermes-engine"
exclude = [
    "hermes-vendor/build/",
    "hermes-vendor/_build/",
    "hermes-vendor/CMakeFiles/",
    "hermes-vendor/CMakeCache.txt",
    "hermes-vendor/cmake-build-*",
    "hermes-vendor/**/*.a",
    "hermes-vendor/**/*.o",
    "hermes-vendor/.git/",
    "hermes-vendor/API/hermes_sandbox/",
    "hermes-vendor/benchmarks/",
    "hermes-vendor/test/",
    "hermes-vendor/unittests/",
    "hermes-vendor/examples/",
    "hermes-vendor/doc/",
    "hermes-vendor/.github/",
    "hermes-vendor/.circleci/",
    "hermes-vendor/.devcontainer/",
    "hermes-vendor/npm/",
    "hermes-vendor/android/build-logic",
    "hermes-vendor/android/cppruntime",
    "hermes-vendor/android/cross-compile",
    "hermes-vendor/android/gradle",
    "hermes-vendor/android/ios-artifacts",
    "hermes-vendor/android/*.gradle*",
    "hermes-vendor/android/gradlew*",
    "hermes-vendor/external/esprima/test_fixtures/",
    "hermes-vendor/external/flowtest/",
    "hermes-vendor/**/*.md",
    "hermes-vendor/tools/hermes-parser/",
    "hermes-vendor/tools/fuzzers/",
    "hermes-vendor/unsupported/",
    "hermes-vendor/lldb/",
    "hermes-vendor/doc/",
    "hermes-vendor/.claude/",
]

[dependencies]
libc = "0.2"
jsi-rs = { path = "../jsi-rs", features = ["sys"] }
cxx = "1.0"

[features]
default = ["typescript", "flow"]
# Enable TypeScript parsing support
typescript = []
# Enable Flow type checking support
flow = []
# Enable unsafe low-level JSI API access
unsafe = []

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"
